[gd_scene load_steps=12 format=3 uid="uid://bravplvuk1u48"]

[ext_resource type="Script" uid="uid://dwfeyl8c68wfg" path="res://Scenes/MainScenes/MainMenu/MainMenu.gd" id="1_005ck"]
[ext_resource type="Script" uid="uid://dffgbtt0w0k6i" path="res://Classes/AutoTile/GenTileAutoMap.gd" id="1_xoqs3"]
[ext_resource type="TileSet" uid="uid://bnlt5mmx0go03" path="res://Assets/TileSet/TileSetDefault.tres" id="2_1d3mn"]
[ext_resource type="AudioStream" uid="uid://dtjsjxpyddr8t" path="res://Assets/Sounds/MenuTick.wav" id="2_kw7sj"]
[ext_resource type="AudioStream" uid="uid://bpqitf15co514" path="res://Assets/Sounds/MenuSelect.wav" id="3_ybtei"]
[ext_resource type="LabelSettings" uid="uid://cssfecsc7m5cq" path="res://Assets/LabelSettings/LSTitleRed.tres" id="4_408d7"]
[ext_resource type="AudioStream" uid="uid://dphpxvag54dcm" path="res://Assets/Music/Moodmode_That8bitMusic.mp3" id="4_ybtei"]
[ext_resource type="LabelSettings" uid="uid://c7pkkkm6vs40t" path="res://Assets/LabelSettings/LSText.tres" id="5_408d7"]
[ext_resource type="Script" uid="uid://cijwfdhhnk6sq" path="res://Scenes/MainScenes/MainMenu/ChoicesContainer/ChoicesContainer.gd" id="5_oyvii"]
[ext_resource type="PackedScene" uid="uid://cr6lft4c1ostv" path="res://Scenes/UserInterface/UIComponents/UIColorOverlay/UIColorOverlay.tscn" id="6_408d7"]
[ext_resource type="PackedScene" uid="uid://clyyc83rf35k0" path="res://Scenes/MainScenes/MainMenu/ChoicesContainer/MenuChoiceLabel/MenuChoiceLabel.tscn" id="6_ijn2q"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_005ck")

[node name="Audio" type="Node" parent="."]

[node name="SelectionAudio" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("2_kw7sj")

[node name="ConfirmAudio" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("3_ybtei")

[node name="MusicAudio" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("4_ybtei")
volume_db = -10.0
autoplay = true

[node name="BackgroundMap" type="TileMapLayer" parent="."]
tile_set = ExtResource("2_1d3mn")
script = ExtResource("1_xoqs3")
map_size = Vector2i(20, 12)
metadata/_custom_type_script = "uid://dffgbtt0w0k6i"

[node name="MenuContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Menu" type="VBoxContainer" parent="MenuContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="MenuContainer/Menu"]
layout_mode = 2
size_flags_horizontal = 4
text = "pixel survivor"
label_settings = ExtResource("4_408d7")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="ChoicesContainer" type="VBoxContainer" parent="MenuContainer/Menu"]
layout_mode = 2
script = ExtResource("5_oyvii")

[node name="ChoiceNew" parent="MenuContainer/Menu/ChoicesContainer" instance=ExtResource("6_ijn2q")]
layout_mode = 2
text = "new game"
menu_label = "New"

[node name="ChoiceMap" parent="MenuContainer/Menu/ChoicesContainer" instance=ExtResource("6_ijn2q")]
layout_mode = 2
text = "map size: XXXXX"
menu_label = "Map"

[node name="ChoiceQuit" parent="MenuContainer/Menu/ChoicesContainer" instance=ExtResource("6_ijn2q")]
layout_mode = 2
text = "exit to desktop"
menu_label = "Quit"

[node name="Copy" type="Label" parent="MenuContainer"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -54.0
offset_top = -30.0
offset_right = 54.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 0
text = "(c) Joey Ducharme - 2025
music by moodmode"
label_settings = ExtResource("5_408d7")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Info" type="Label" parent="MenuContainer"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -54.0
offset_right = 54.0
offset_bottom = 23.0
grow_horizontal = 2
text = "A game for the tonygamejam (february 2025)"
label_settings = ExtResource("5_408d7")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="UIColorOverlay" parent="MenuContainer" instance=ExtResource("6_408d7")]
layout_mode = 1
